tests/ui/issues/issue-38954.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-38954.rs:1:18
   |
LL | fn _test(ref _p: str) {}
   |                  ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn _test(ref _p: &str) {}
   |                  +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
