tests/ui/issues/issue-38954.rs
fn _test(ref _p: str) {}
//~^ ERROR the size for values of type

fn main() { }
